--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch src/server.ts",
+    "test": "vitest run --dir src/use-case",
     "start": "node build/server.js"
   },
   "keywords": [],
@@ -22,10 +22,14 @@
     "eslint-plugin-promise": "^6.1.1",
     "prisma": "^4.12.0",
     "tsx": "^3.12.6",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "vite-tsconfig-paths": "^4.0.8",
+    "vitest": "^0.30.0"
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
+    "@types/bcryptjs": "^2.4.2",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "fastify": "^4.15.0",
     "zod": "^3.21.4"
